Add random image generator

--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     <title>Cat vs Dog</title>
   </head>
   <body>
-    
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 center">
+          <img src="img/cat.jpg" alt="Image of a cat"><br><br>
+
+          <input type="button" value="Meow">
+        </div>
+        <div class="col-md-6 center">
+          <img src="img/dog.jpeg" alt="Image of a puppy"><br><br>
+          
+          <input type="button" value="Bark">
+        </div>
+      </div>
+    </div>
   </body>
 </html>
